--- a/What's New Section.html
+++ b/What's New Section.html
@@ -12,7 +12,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;"
                         data-sr-id="2"></i>
-                    <h3 style="color: #fff;">Quantum Academy</h3>
+                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">Quantum Academy</h3>
                     <p style="color: #fff;">This year we are proud to offer an entirely new program called Quantum Academy. It encompasses all the best aspects of both Quantum University and Leadership Forum, while providing its own unique flow.</p>
                 </div>
             </div>
@@ -20,7 +20,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "
                         data-sr-id="2"></i>
-                    <h3 style="color: #fff;">10 Day and 6 Day Options</h3>
+                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">10 and 6 Day Options</h3>
                     <p style="color: #fff;">For Senior Forum there will be 10 day as well as 6 day options. For Junior Forum there will be 6 Day Options.</p>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "
                         data-sr-id="2"></i>
-                    <h3 style="color: #fff;">Thank You Academic Advisory!</h3>
+                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">Thank You Academic Advisory!</h3>
                     <p style="color: #fff;">Thank you to the Academic Advisory - Ben Balkwill, Karen Borbolla, Patti Brucky, Bobbi DePorter, Megan Kennedy, Jeff Miller, Richard Reyes, and Charles Smith - for all of the support in making the program updates!</p>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "
                         data-sr-id="2"></i>
-                    <h3 style="color: #fff;">Distinctions</h3>
+                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">Distinctions</h3>
                     <p style="color: #fff;">[Distinctions to highlight.]</p>
                 </div>
             </div>
