--- a/What's New Section.html
+++ b/What's New Section.html
@@ -13,7 +13,7 @@
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;"
                         data-sr-id="2"></i>
                     <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">Quantum Academy</h3>
-                    <p style="color: #fff;">This year we are proud to offer an entirely new program called Quantum Academy. It encompasses all the best aspects of both Quantum University and Leadership Forum, while providing its own unique flow.</p>
+                    <p style="color: #fff;">This year we are proud to offer an entirely new program called <strong>Quantum Academy</strong>. It encompasses all the best aspects of both Quantum University and Leadership Forum, while providing its own unique flow.</p>
                 </div>
             </div>
             <div class="col-lg-3-bs col-md-6-bs text-center-bs">
