--- a/What's New Section.html
+++ b/What's New Section.html
@@ -2,7 +2,8 @@
     <div class="container-bs">
         <div class="row-bs">
             <div class="col-lg-12-bs text-center-bs">
-                <h2 class="section-heading-bs" style="color: #fff;">Program Updates</h2>
+                <h2 class="section-heading-bs">Program Updates</h2>
+                <hr class="bs" style="border-color: #34618C;">
             </div>
         </div>
     </div>
