--- a/What's New Section - Staff Updates.html
+++ b/What's New Section - Staff Updates.html
@@ -2,7 +2,7 @@
     <div class="container-bs">
         <div class="row-bs">
             <div class="col-lg-12-bs text-center-bs">
-                <h2 class="section-heading-bs">Our Sites for 2017</h2>
+                <h2 class="section-heading-bs">Staff Updates</h2>
                 <hr class="bs" style="border-color: #34618C; margin-bottom: 20px;">
             </div>
         </div>
@@ -13,24 +13,28 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;"
                         data-sr-id="2"></i>
-                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">5 Sites to 3 Sites</h3>
-                    <p style="color: #fff;">This year we are moving from 5 sites to 3 -- Standford University, California State Univserity San Marcos, and Villanova University.</p>
+                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">4 FACs to 5 FACs</h3>
+                    <p style="color: #fff;">We hope you're excited as we are about introducing a new 5 FAC model*. The Facilitators will continue to hold the same responsibilities as they have in previous years, and the 5th Facilitator will also serve as the primary TL Supervisor.
+                        <p
+                            style="font-size: 14px">*5 FAC Model applies to stateside sites only.</p>
+                    </p>
                 </div>
             </div>
             <div class="col-lg-4-bs col-md-6-bs text-center-bs">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "
                         data-sr-id="2"></i>
-                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">International</h3>
-                    <p style="color: #fff;">We are going to be offering many more international sites including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
+                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">2 TLs to 3 TLs</h3>
+                    <p style="color: #fff;">Just as we are moving to a new model for Facilitators, we are now going to provide a 3 TL model. All TLs will have an entirely new daily schedule.</p>
                 </div>
             </div>
             <div class="col-lg-4-bs col-md-12-bs text-center-bs">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "
                         data-sr-id="2"></i>
-                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">New Additions To The SuperCamp Website</h3>
-                    <p style="color: #fff;">[Here are Links to Pages in SC Website]</p>
+                    <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">New Pay Structure</h3>
+                    <p style="color: #fff;">We are introducing a brand new pay structure! All Team Leaders, Wellness Persons, Office Coordinators, and Logistics Coordinators are now paid an hourly wage. Facilitators, and Site Counselors are professional exempt, while Site Administrators
+                        are administrative exempt.</p>
                 </div>
             </div>
         </div>
