--- a/What's New Section - Staff Updates.html
+++ b/What's New Section - Staff Updates.html
@@ -14,10 +14,8 @@
                     <i class="fa fa-4x fa-users text-primary sr-icons" style="color: #34618C;; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s;"
                         data-sr-id="2"></i>
                     <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">4 FACs to 5 FACs</h3>
-                    <p style="color: #fff;">We hope you're excited as we are about introducing a new 5 FAC model*. The Facilitators will continue to hold the same responsibilities as they have in previous years, and the 5th Facilitator will also serve as the primary TL Supervisor.
-                        <p
-                            style="font-size: 14px">*5 FAC Model applies to stateside sites only.</p>
-                    </p>
+                    <p style="color: #fff;">We hope you're excited as we are about introducing a new 5 FAC model*. The Facilitators will continue to hold the same responsibilities as they have in previous years, and the 5th Facilitator will also serve as the primary TL Supervisor.</p>
+                    <p style="font-size: 14px">*5 FAC Model applies to stateside sites only.</p>
                 </div>
             </div>
             <div class="col-lg-4-bs col-md-6-bs text-center-bs">
