--- a/What's New Section - Staff Updates.html
+++ b/What's New Section - Staff Updates.html
@@ -1,4 +1,4 @@
-<section id="staffupdates" class="bg-primary-bs">
+<section id="staffupdates" class="bg-secondary-bs">
     <div class="container-bs">
         <div class="row-bs">
             <div class="col-lg-12-bs text-center-bs">
