--- a/What's New Section - Staff Updates.html
+++ b/What's New Section - Staff Updates.html
@@ -15,7 +15,7 @@
                         data-sr-id="2"></i>
                     <h3 style="color: #fff;margin-top: 20px;margin-bottom: 10px;">4 FACs to 5 FACs</h3>
                     <p style="color: #fff;">We hope you're excited as we are about introducing a new 5 FAC model*. The Facilitators will continue to hold the same responsibilities as they have in previous years, and the 5th Facilitator will also serve as the primary TL Supervisor.</p>
-                    <p style="font-size: 14px">*5 FAC Model applies to stateside sites only.</p>
+                    <p style="font-size: 12px; color: #f7f7f7;">*5 FAC Model applies to stateside sites only.</p>
                 </div>
             </div>
             <div class="col-lg-4-bs col-md-6-bs text-center-bs">
