added float hvr to cards

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row-bs">
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/site-administrator/" class="icon-link">
                             <i class="fa fa-home"></i>
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/site-counselor/" class="icon-link">
 							<i class="fa fa-wrench"></i>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/lead-facilitator/" class="icon-link">
 							<i class="fa fa-user"></i>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/facilitator/" class="icon-link">
 							<i class="fa fa-globe"></i>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/logistics-coordinator/" class="icon-link">
 							<i class="fa fa-calculator"></i>
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/office-coordinator/" class="icon-link">
 							<i class="fa fa-paperclip"></i>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/wellness-person/" class="icon-link">
 							<i class="fa fa-plus"></i>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/senior-team-leader/" class="icon-link">
 							<i class="fa fa-cubes"></i>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="col-md-4-bs text-center-bs">
-                <div class="services">
+                <div class="services hvr-float-shadow">
                     <span class="icon">
                         <a href="http://supercamp.com/stafftestpage/available-positions/team-leader/" class="icon-link">
 							<i class="fa fa-users"></i>
