added subheading and changed labels

--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -1,29 +1,29 @@
-<section id="datesandlocations" class="bg-primary-bs">
+<section id="datesandlocations" class="bg-secondary-bs">
     <div class="container-bs">
         <div class="row-bs">
             <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
                 <h2 class="section-heading-bs">What's New 2017</h2>
                 <hr class="bs" style="border-color: #97ABBD;">
-                <p class="bs">[subheading about what is new]</p>
+                <p class="bs">From new programs to payscales, we've made some additions and updates going into 2017. Take a look and get aquainted!</p>
             </div>
         </div>
         <div class="row-bs">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs tabs-5" role="tablist" style="background-color: #0B62A4;">
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel1" role="tab">Programs</a>
+                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-1" role="tab">Programs</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel2" role="tab">Sites</a>
+                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-2" role="tab">Sites</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel3" role="tab">Staff</a>
+                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-3" role="tab">Staff</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel4" role="tab">Training</a>
+                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-4" role="tab">Training</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel5" role="tab">System</a>
+                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-5" role="tab">System</a>
                 </li>
             </ul>
 
@@ -32,7 +32,7 @@
 
                 <!--Panel 1-->
                 <!--Programs-->
-                <div class="tab-pane fade in active" id="panel1" role="tabpanel">
+                <div class="tab-pane fade in active" id="panel-wn-1" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-sm-3-bs col-xs-6-bs text-center-bs">
@@ -78,7 +78,7 @@
 
                 <!--Panel 2-->
                 <!--Sites-->
-                <div class="tab-pane fade" id="panel2" role="tabpanel">
+                <div class="tab-pane fade" id="panel-wn-2" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
@@ -115,7 +115,7 @@
 
                 <!--Panel 3-->
                 <!--Staff-->
-                <div class="tab-pane fade" id="panel3" role="tabpanel">
+                <div class="tab-pane fade" id="panel-wn-3" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
@@ -155,7 +155,7 @@
 
                 <!--Panel 4-->
                 <!--Training-->
-                <div class="tab-pane fade" id="panel4" role="tabpanel">
+                <div class="tab-pane fade" id="panel-wn-4" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-xs-6-bs text-center-bs">
@@ -183,7 +183,7 @@
 
                 <!--Panel 5-->
                 <!--System-->
-                <div class="tab-pane fade" id="panel5" role="tabpanel">
+                <div class="tab-pane fade" id="panel-wn-5" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
