--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -43,40 +43,40 @@
                                     <h3>Quantum Academy</h3>
                                     <hr class="bs">
                                     <p>This year we are proud to offer an entirely new program called <strong>Quantum Academy</strong>. It encompasses all the best aspects of both Quantum University and Leadership Forum, while providing its own unique flow.</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-bars fa-3x"></i>
                                     </div>
                                     <h3>10 and 6 Day Options</h3>
                                     <hr class="bs">
                                     <p>For Senior Forum there will be 10 day as well as 6 day options. For Junior Forum there will be 6 Day Options.</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-thumbs-up fa-3x"></i>
                                     </div>
                                     <h3>Thank You Academic Advisory!</h3>
                                     <hr class="bs">
                                     <p>Thank you to the Academic Advisory - Ben Balkwill, Karen Borbolla, Patti Brucky, Bobbi DePorter, Megan Kennedy, Jeff Miller, Richard Reyes, and Charles Smith - for all of the support in making the program updates!</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-book fa-3x"></i>
                                     </div>
                                     <h3>Distinctions</h3>
                                     <hr class="bs">
                                     <p>[Distinctions to highlight.]</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                         </div>
@@ -92,34 +92,34 @@
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-map-signs fa-3x"></i>
                                     </div>
                                     <h3>5 Sites to 3 Sites</h3>
                                     <hr class="bs">
                                     <p>This year we are moving from 5 sites to 3 -- Standford University, California State Univserity San Marcos, and Villanova University.</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-globe fa-3x"></i>
                                     </div>
                                     <h3>International</h3>
                                     <hr class="bs">
                                     <p>We are going to be offering many more international sites including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-desktop fa-3x"></i>
                                     </div>
                                     <h3>New Additions To The SuperCamp Website</h3>
                                     <hr class="bs">
                                     <p>[Here are Links to Pages in SC Website]</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                         </div>
@@ -135,37 +135,37 @@
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-user-plus fa-3x"></i>
                                     </div>
                                     <h3>4 FACs to 5 FACs</h3>
                                     <hr class="bs">
                                     <p>We hope you're excited as we are about introducing a new 5 FAC model*. The Facilitators will continue to hold the same responsibilities as they have in previous years, and the 5th Facilitator will also serve as the
                                         primary TL Supervisor.</p>
-                                    <p style="font-size: 12px; color: #f7f7f7;">*5 FAC Model applies to stateside sites only.</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+                                    <p style="font-size: 12px;">*5 FAC Model applies to stateside sites only.</p>
+
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-users fa-3x"></i>
                                     </div>
                                     <h3>2 TLs to 3 TLs</h3>
                                     <hr class="bs">
                                     <p>Just as we are moving to a new model for Facilitators, we are now going to provide a 3 TL model. All TLs will have an entirely new daily schedule.</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-money fa-3x"></i>
                                     </div>
                                     <h3>New Pay Structure</h3>
                                     <hr class="bs">
                                     <p>We are introducing a brand new pay structure! All Team Leaders, Wellness Persons, Office Coordinators, and Logistics Coordinators are now paid an hourly wage. Facilitators, and Site Counselors are professional exempt,
                                         while Site Administrators are administrative exempt.</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                         </div>
@@ -181,23 +181,23 @@
                             <div class="col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-heart fa-3x"></i>
                                     </div>
                                     <h3>Know It By Heart</h3>
                                     <hr class="bs">
                                     <p>We are having a Know It By Heart this spring to cover all of the new distinctions for the summer. [Dates]</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-laptop fa-3x"></i>
                                     </div>
                                     <h3>Virtual Training</h3>
                                     <hr class="bs">
                                     <p>All other positions, including leadership positions, will receive online virtual training.</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                         </div>
@@ -213,35 +213,35 @@
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-cogs fa-3x"></i>
                                     </div>
                                     <h3>CampMinder</h3>
                                     <hr class="bs">
                                     <p>We are using CampMinder, a web-based summer camp management platform for both staff and campers this year!</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-camera-retro fa-3x"></i>
                                     </div>
                                     <h3>Photobucket</h3>
                                     <hr class="bs">
                                     <p>[Possible Photobucket Changes]</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <i class="fa fa-rocket fa-3x"></i>
                                     </div>
                                     <h3>New Staff Website</h3>
                                     <hr class="bs">
                                     <p>We have moved the staff website from www.supercampstaff.com to www.supercamp.com/[finalized name]! It has a completely new look and feel, and we hope you love it just as much as we do.</p>
-                                    <p style="color: #f7f7f7; font-size: 12px;">Special thanks to Alex Lee for all the hard work.</p>
-                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+                                    <p style="font-size: 12px;">Special thanks to Alex Lee for all the hard work.</p>
+
                                 </div>
                             </div>
                         </div>
