--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -11,19 +11,19 @@
             <!-- Nav tabs -->
             <ul class="nav nav-tabs tabs-5" role="tablist" style="background-color: #0B62A4;">
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-1" role="tab">Programs</a>
+                    <a class="nav-link active" data-toggle="tab" href="#panel-wn-1" role="tab">Programs</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-2" role="tab">Sites</a>
+                    <a class="nav-link active" data-toggle="tab" href="#panel-wn-2" role="tab">Sites</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-3" role="tab">Staff</a>
+                    <a class="nav-link active" data-toggle="tab" href="#panel-wn-3" role="tab">Staff</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-4" role="tab">Training</a>
+                    <a class="nav-link active" data-toggle="tab" href="#panel-wn-4" role="tab">Training</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
-                    <a class="nav-link active" style="padding: 5em;" data-toggle="tab" href="#panel-wn-5" role="tab">System</a>
+                    <a class="nav-link active" data-toggle="tab" href="#panel-wn-5" role="tab">System</a>
                 </li>
             </ul>
 
@@ -43,7 +43,6 @@
                                     <h3>Quantum Academy</h3>
                                     <hr class="bs">
                                     <p>This year we are proud to offer an entirely new program called <strong>Quantum Academy</strong>. It encompasses all the best aspects of both Quantum University and Leadership Forum, while providing its own unique flow.</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-6-bs text-center-bs">
@@ -54,7 +53,6 @@
                                     <h3>10 and 6 Day Options</h3>
                                     <hr class="bs">
                                     <p>For Senior Forum there will be 10 day as well as 6 day options. For Junior Forum there will be 6 Day Options.</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-6-bs text-center-bs">
@@ -65,7 +63,6 @@
                                     <h3>Thank You Academic Advisory!</h3>
                                     <hr class="bs">
                                     <p>Thank you to the Academic Advisory - Ben Balkwill, Karen Borbolla, Patti Brucky, Bobbi DePorter, Megan Kennedy, Jeff Miller, Richard Reyes, and Charles Smith - for all of the support in making the program updates!</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-6-bs text-center-bs">
@@ -76,7 +73,6 @@
                                     <h3>Distinctions</h3>
                                     <hr class="bs">
                                     <p>[Distinctions to highlight.]</p>
-
                                 </div>
                             </div>
                         </div>
@@ -97,7 +93,6 @@
                                     <h3>5 Sites to 3 Sites</h3>
                                     <hr class="bs">
                                     <p>This year we are moving from 5 sites to 3 -- Standford University, California State Univserity San Marcos, and Villanova University.</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
@@ -108,7 +103,6 @@
                                     <h3>International</h3>
                                     <hr class="bs">
                                     <p>We are going to be offering many more international sites including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
@@ -119,7 +113,6 @@
                                     <h3>New Additions To The SuperCamp Website</h3>
                                     <hr class="bs">
                                     <p>[Here are Links to Pages in SC Website]</p>
-
                                 </div>
                             </div>
                         </div>
@@ -142,7 +135,6 @@
                                     <p>We hope you're excited as we are about introducing a new 5 FAC model*. The Facilitators will continue to hold the same responsibilities as they have in previous years, and the 5th Facilitator will also serve as the
                                         primary TL Supervisor.</p>
                                     <p style="font-size: 12px;">*5 FAC Model applies to stateside sites only.</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
@@ -153,7 +145,6 @@
                                     <h3>2 TLs to 3 TLs</h3>
                                     <hr class="bs">
                                     <p>Just as we are moving to a new model for Facilitators, we are now going to provide a 3 TL model. All TLs will have an entirely new daily schedule.</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
@@ -165,7 +156,6 @@
                                     <hr class="bs">
                                     <p>We are introducing a brand new pay structure! All Team Leaders, Wellness Persons, Office Coordinators, and Logistics Coordinators are now paid an hourly wage. Facilitators, and Site Counselors are professional exempt,
                                         while Site Administrators are administrative exempt.</p>
-
                                 </div>
                             </div>
                         </div>
@@ -186,7 +176,6 @@
                                     <h3>Know It By Heart</h3>
                                     <hr class="bs">
                                     <p>We are having a Know It By Heart this spring to cover all of the new distinctions for the summer. [Dates]</p>
-
                                 </div>
                             </div>
                             <div class="col-xs-6-bs text-center-bs">
@@ -197,7 +186,6 @@
                                     <h3>Virtual Training</h3>
                                     <hr class="bs">
                                     <p>All other positions, including leadership positions, will receive online virtual training.</p>
-
                                 </div>
                             </div>
                         </div>
@@ -218,7 +206,6 @@
                                     <h3>CampMinder</h3>
                                     <hr class="bs">
                                     <p>We are using CampMinder, a web-based summer camp management platform for both staff and campers this year!</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
@@ -229,7 +216,6 @@
                                     <h3>Photobucket</h3>
                                     <hr class="bs">
                                     <p>[Possible Photobucket Changes]</p>
-
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
@@ -241,7 +227,6 @@
                                     <hr class="bs">
                                     <p>We have moved the staff website from www.supercampstaff.com to www.supercamp.com/[finalized name]! It has a completely new look and feel, and we hope you love it just as much as we do.</p>
                                     <p style="font-size: 12px;">Special thanks to Alex Lee for all the hard work.</p>
-
                                 </div>
                             </div>
                         </div>
