--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -5,20 +5,21 @@
                 <h2 class="section-heading-bs">Dates and Locations</h2>
                 <hr class="bs" style="border-color: #97ABBD;">
                 <p class="bs">Since 1982 we've hosted amazing camps across the United States at leading universities. We also work with international partners to bring the SuperCamp experience to teens around the world. More than 75,000 students have participated...and
-                    counting!</p>
+                    counting!
+                </p>
             </div>
         </div>
         <div class="row-bs">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs tabs-3" role="tablist" style="background-color: #0B62A4;">
-                <li class="nav-item waves-effect waves-light">
-                    <a class="nav-link active" data-toggle="tab" href="#panel1" role="tab">June</a>
+                <li class="nav-item waves-effect waves-light nav-item-3" style="background-color: rgba(255, 255, 255, 0.2);">
+                    <a class="nav-link active" style="padding: 0em; background-color: transparent;" data-toggle="tab" href="#panel1" role="tab">June</a>
                 </li>
-                <li class="nav-item waves-effect waves-light">
-                    <a class="nav-link active" data-toggle="tab" href="#panel2" role="tab">July</a>
+                <li class="nav-item waves-effect waves-light nav-item-3" style="background-color: rgba(255, 255, 255, 0.2);">
+                    <a class="nav-link active" style="padding: 0em; background-color: transparent;" data-toggle="tab" href="#panel2" role="tab">July</a>
                 </li>
-                <li class="nav-item waves-effect waves-light">
-                    <a class="nav-link active" data-toggle="tab" href="#panel3" role="tab">August</a>
+                <li class="nav-item waves-effect waves-light nav-item-3" style="background-color: rgba(255, 255, 255, 0.2);">
+                    <a class="nav-link active" style="padding: 0em; background-color: transparent;" data-toggle="tab" href="#panel3" role="tab">August</a>
                 </li>
             </ul>
 
