changed section id

--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -1,4 +1,4 @@
-<section id="datesandlocations" class="bg-secondary-bs">
+<section id="whatsnew" class="bg-secondary-bs">
     <div class="container-bs">
         <div class="row-bs">
             <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
