--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -10,20 +10,20 @@
         <div class="row-bs">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs tabs-5" role="tablist" style="background-color: #0B62A4;">
-                <li class="nav-item waves-effect waves-light nav-item-5" style="background-color: rgba(255, 255, 255, 0.2);">
-                    <a class="nav-link active" style="padding: 0em; background-color: transparent;" data-toggle="tab" href="#panel-wn-1" role="tab">Programs</a>
+                <li class="nav-item waves-effect waves-light nav-item-5">
+                    <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel-wn-1" role="tab">Programs</a>
                 </li>
-                <li class="nav-item waves-effect waves-light nav-item-5" style="background-color: rgba(255, 255, 255, 0.2);">
-                    <a class="nav-link active" style="padding: 0em; background-color: transparent;" data-toggle="tab" href="#panel-wn-2" role="tab">Sites</a>
+                <li class="nav-item waves-effect waves-light nav-item-5">
+                    <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel-wn-2" role="tab">Sites</a>
                 </li>
-                <li class="nav-item waves-effect waves-light nav-item-5" style="background-color: rgba(255, 255, 255, 0.2);">
-                    <a class="nav-link active" style="padding: 0em; background-color: transparent;" data-toggle="tab" href="#panel-wn-3" role="tab">Staff</a>
+                <li class="nav-item waves-effect waves-light nav-item-5">
+                    <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel-wn-3" role="tab">Staff</a>
                 </li>
-                <li class="nav-item waves-effect waves-light nav-item-5" style="background-color: rgba(255, 255, 255, 0.2);">
-                    <a class="nav-link active" style="padding: 0em; background-color: transparent;" data-toggle="tab" href="#panel-wn-4" role="tab">Training</a>
+                <li class="nav-item waves-effect waves-light nav-item-5">
+                    <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel-wn-4" role="tab">Training</a>
                 </li>
-                <li class="nav-item waves-effect waves-light nav-item-5" style="background-color: rgba(255, 255, 255, 0.2);">
-                    <a class="nav-link active" style="padding: 0em; background-color: transparent;" data-toggle="tab" href="#panel-wn-5" role="tab">System</a>
+                <li class="nav-item waves-effect waves-light nav-item-5">
+                    <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel-wn-5" role="tab">System</a>
                 </li>
             </ul>
 
