added active class to fist tab

--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -10,7 +10,7 @@
         <div class="row-bs">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs tabs-5" role="tablist" style="background-color: #0B62A4;">
-                <li class="nav-item waves-effect waves-light nav-item-5">
+                <li class="nav-item waves-effect waves-light nav-item-5 active">
                     <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel-wn-1" role="tab">Programs</a>
                 </li>
                 <li class="nav-item waves-effect waves-light nav-item-5">
