--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -13,13 +13,13 @@
         <div class="row-bs">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs tabs-3" role="tablist" style="background-color: #0B62A4;">
-                <li class="nav-item waves-effect waves-light nav-item-3;">
+                <li class="nav-item waves-effect waves-light nav-item-3 active">
                     <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel1" role="tab">June</a>
                 </li>
-                <li class="nav-item waves-effect waves-light nav-item-3;">
+                <li class="nav-item waves-effect waves-light nav-item-3">
                     <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel2" role="tab">July</a>
                 </li>
-                <li class="nav-item waves-effect waves-light nav-item-3;">
+                <li class="nav-item waves-effect waves-light nav-item-3">
                     <a class="nav-link active" style="padding: 0em; background-color: transparent; display: block;" data-toggle="tab" href="#panel3" role="tab">August</a>
                 </li>
             </ul>
