added class so that the video carousel on top does not slide down page

--- a/index - testimonials.html
+++ b/index - testimonials.html
@@ -11,7 +11,7 @@
                         <li data-target="#fade-quote-carousel" data-slide-to="2"></li>
                     </ol>
                     <!-- Carousel items -->
-                    <div class="carousel-inner" style="position: relative;">
+                    <div class="carousel-inner testimonial" style="position: relative;">
                         <div class="active item">
                             <blockquote>
                                 <p style="line-height: 2em;">Every summer I've worked for SuperCamp, I have left with a better understanding of who I am, and where I want to be.</p>
