--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -132,8 +132,7 @@
                                     </div>
                                     <h3>4 FACs to 5 FACs</h3>
                                     <hr class="bs">
-                                    <p>We hope you're excited as we are about introducing a new 5 FAC model*. The Facilitators will continue to hold the same responsibilities as they have in previous years, and the 5th Facilitator will also serve as the
-                                        primary TL Supervisor.</p>
+                                    <p>We are about introducing a 5 FAC model*. All Facilitators will continue to hold the same responsibilities as they have in previous years, with the 5th Facilitator also serving as the primary TL Supervisor.</p>
                                     <p style="font-size: 12px;">*5 FAC Model applies to stateside sites only.</p>
                                 </div>
                             </div>
@@ -144,7 +143,8 @@
                                     </div>
                                     <h3>2 TLs to 3 TLs</h3>
                                     <hr class="bs">
-                                    <p>Just as we are moving to a new model for Facilitators, we are now going to provide a 3 TL model. All TLs will have an entirely new daily schedule.</p>
+                                    <p>We are also introducing a 3 TL model*. Each group of 3 TLs will have approximately 20 campers in their team. All TLs will have a new daily schedule.</p>
+                                    <p style="font-size: 12px;">*3 TL Model applies to stateside sites only.</p>
                                 </div>
                             </div>
                             <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
@@ -154,8 +154,8 @@
                                     </div>
                                     <h3>New Pay Structure</h3>
                                     <hr class="bs">
-                                    <p>We are introducing a brand new pay structure! All Team Leaders, Wellness Persons, Office Coordinators, and Logistics Coordinators are now paid an hourly wage. Facilitators, and Site Counselors are professional exempt,
-                                        while Site Administrators are administrative exempt.</p>
+                                    <p>We have a brand new pay structure! All Senior Team Leaders, Team Leaders, Wellness Persons, Office Coordinators, and Logistics Coordinators are now paid an hourly wage. Facilitators and Site Counselors are considered
+                                        professional exempt employees, while Site Administrators are considered administrative exempt employees. These positions will continue to be paid a weekly salary.</p>
                                 </div>
                             </div>
                         </div>
@@ -175,7 +175,8 @@
                                     </div>
                                     <h3>Know It By Heart</h3>
                                     <hr class="bs">
-                                    <p>We are having a Know It By Heart this spring to cover all of the new distinctions for the summer. [Dates]</p>
+                                    <p>We are having a Know It By Heart this spring to cover all of the new distinctions for the summer.</p>
+                                    <p>March 29th - April 2nd</p>
                                 </div>
                             </div>
                             <div class="col-xs-6-bs text-center-bs">
@@ -186,6 +187,8 @@
                                     <h3>Virtual Training</h3>
                                     <hr class="bs">
                                     <p>All other positions, including leadership positions, will receive online virtual training.</p>
+                                    <p>The virtual kick-off for Leaders In Training (required for Decision Team Members) will be on Saturday, March 11th. Please save the date! Start and end time of LIT kick-off is TBD.</p>
+                                    <p>All other training dates and times vary by position and will be announced via email communication.</p>
                                 </div>
                             </div>
                         </div>
@@ -198,27 +201,17 @@
                 <div class="tab-pane fade" id="panel-wn-5" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
-                            <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
+                            <div class="col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
                                         <i class="fa fa-cogs fa-3x"></i>
                                     </div>
                                     <h3>CampMinder</h3>
                                     <hr class="bs">
-                                    <p>We are using CampMinder, a web-based summer camp management platform for both staff and campers this year!</p>
+                                    <p>We are using CampMinder, a secure, user-friendly, customizable web-based Summer camp management platform for both staff and campers this year!</p>
                                 </div>
                             </div>
-                            <div class="col-sm-4-bs col-xs-6-bs text-center-bs">
-                                <div class="location-breakdown">
-                                    <div class="icon-hold">
-                                        <i class="fa fa-camera-retro fa-3x"></i>
-                                    </div>
-                                    <h3>Photobucket</h3>
-                                    <hr class="bs">
-                                    <p>[Possible Photobucket Changes]</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
+                            <div class="col-xs-6-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
                                         <i class="fa fa-rocket fa-3x"></i>
